@@ -1,4 +1,5 @@
 = X.X.X - XXXX/XX/XX =
+* Introduce TemplateLoaderInterface.
 * Remove the check for the empty $data value. Let templates to be included even if data is not set. We cannot know if $data is useful or not.
 
 = 2.0.0 - 2017/05/21 =
